// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty list correctly 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onViewableItemsChanged={undefined}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View />
</RCTScrollView>
`;

exports[`renders instruments correctly 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    Array [
      Instrument {
        "code": "ING",
        "initialPrice": 14.523253412,
        "lastPriceTime": 1497888536011,
        "price": 14.523253412,
      },
      Instrument {
        "code": "AAPL",
        "initialPrice": 258.3693474,
        "lastPriceTime": 1497888703132,
        "price": 258.3693474,
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onViewableItemsChanged={undefined}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={undefined}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 0,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "fontWeight": "bold",
            }
          }
        >
          ING
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B8B8B8",
                "marginRight": 8,
              }
            }
          >
            14.52
          </Text>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 2,
                  "paddingVertical": 2,
                  "width": 52,
                },
                Object {
                  "backgroundColor": "#55EDB5",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 12,
                }
              }
            >
              0
              %
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgb(200, 199, 204)",
            "height": 0.5,
            "marginLeft": 8,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 0,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "fontWeight": "bold",
            }
          }
        >
          AAPL
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B8B8B8",
                "marginRight": 8,
              }
            }
          >
            258.37
          </Text>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 2,
                  "paddingVertical": 2,
                  "width": 52,
                },
                Object {
                  "backgroundColor": "#55EDB5",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 12,
                }
              }
            >
              0
              %
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
